--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js"
-  }, 
+  },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1637745161.ea53f98",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "d3": "^7.1.0",
